Fixed UI Layout (too squeezy on mobile)

--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
 .main-body {
     /* font-family: 'Karla', sans-serif; */
-    width: 50%;
     margin: auto;
 }
 
